--- a/fbw-a32nx/src/systems/instruments/src/MsfsAvionicsCommon/common.scss
+++ b/fbw-a32nx/src/systems/instruments/src/MsfsAvionicsCommon/common.scss
@@ -42,9 +42,11 @@
   visibility: visible !important;
   background-image: url('./thalesTest.svg');
   background-size: cover;
+  font-family: "Ecam", monospace;
 }
 
 .EngineeringTestModeText {
   font-size: 21px;
   color: black;
+  font-family: "Ecam", monospace;
 }
